[project]
name = "cfapy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Zibo Wang", email = "zibo.w@outlook.com" }
]
dependencies = [
    "numpy>=2.1.1",
    "scipy>=1.14.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cfapy"]
